# cours-morpion

./: .gitignore  CLAUDE.md  README.md  about.html  index.html
.github/workflows/: pages.yml
python/: .gitignore  README.md  pyproject.toml
python/src/: console.py  minimax.py  moteur.py  serveur_mcp.py  web.py
python/src/templates/: index.html  index.html.jinja
python/tests/: test_minimax.py
