[project]
name = "Morpion-MPC"
version = "0.1.0"
description = "Un jeu de morpion avec support pour MCP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["mcp[cli]>=0.1.0", "fastmcp>=0.1.0", "structlog>=25.5.0", "flask>=3.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=8.0.0",
    "ruff>=0.15.9",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
